Action Actuator, Priorities higher than 1 break Playback #31276

Closed
opened 2012-05-03 17:58:35 +02:00 by Auuman Anubis · 8 comments

%%%Actions with a Priority higher than 0, don't revert back to the first frame when reactivated.

Action actuator using "Play" playback type usually allows a action to restart at (designated frame) if reactivated during playback.

But this only works correctly if the Actuator uses "Priority 0"

Start Game, And use the "spacebar" to Play the animation.

Now press the "spacebar" again to restart the animation mid playback.

Only the Red cube restarts properly (Priority 0), while the Blue cube continues playback (Priority 1)%%%

%%%Actions with a Priority higher than 0, don't revert back to the first frame when reactivated. Action actuator using "Play" playback type usually allows a action to restart at (designated frame) if reactivated during playback. But this only works correctly if the Actuator uses "Priority 0" ### Start Game, And use the "spacebar" to Play the animation. Now press the "spacebar" again to restart the animation mid playback. Only the Red cube restarts properly (Priority 0), while the Blue cube continues playback (Priority 1)%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%I typo-ed in my summary, it should read.

Action Actuator, Priorities higher than "0" break Playback restart.%%%

%%%I typo-ed in my summary, it should read. Action Actuator, Priorities higher than "0" break Playback restart.%%%
Author

%%%Lastly,

this was tested in 2.63 when it appeared broken

and in 2.49 it works properly.%%%

%%%Lastly, this was tested in 2.63 when it appeared broken and in 2.49 it works properly.%%%

%%%I committed a fix as r46921. Please let me know if this solves your problem (or causes other problems).%%%

%%%I committed a fix as r46921. Please let me know if this solves your problem (or causes other problems).%%%
Author

%%%It's working now!!!

I still have to test all my files to make sure nothing new becomes a issue. but right now, it works beautifully. %%%

%%%It's working now!!! I still have to test all my files to make sure nothing new becomes a issue. but right now, it works beautifully. %%%
Author

%%%BUG...maybe.

Not sure if it's design or bug...

When "level triggering (Pulse mode)" is activated, the animations are "stuck" at frame 1 (as long as the sensor remains emitting pulses)
In Blender 2.49 the animation would continue though all the frames. Even when "Pulse mode" was activated.

You can see the expected behavior with the new 2.49 file I just uploaded.

When you compare it to 2.63 r46981 (and activate pulse mode for the RED cube) you'll see the difference.%%%

%%%BUG...maybe. Not sure if it's design or bug... When "level triggering (Pulse mode)" is activated, the animations are "stuck" at frame 1 (as long as the sensor remains emitting pulses) In Blender 2.49 the animation would continue though all the frames. Even when "Pulse mode" was activated. You can see the expected behavior with the new 2.49 file I just uploaded. When you compare it to 2.63 r46981 (and activate pulse mode for the RED cube) you'll see the difference.%%%

%%%Since the original bug was fixed, and the second one is represented by this report: http://projects.blender.org/tracker/?group_id=9&atid=306&func=detail&aid=29412, I'm going to close this report as fixed.%%%

%%%Since the original bug was fixed, and the second one is represented by this report: http://projects.blender.org/tracker/?group_id=9&atid=306&func=detail&aid=29412, I'm going to close this report as fixed.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31276
No description provided.