Fix for [#31276] Action Actuator, Priorities higher than 1 break Playback:

The code was looking to see if the priority was strictly greater than the current priority, but it seems that an equal priority should also override (at least the report seems to suggest that this is the behavior from 2.49).